--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <img class="code-img" src="images/png/code.png" alt="code">
           <h3>Web Development</h3>
           <p>I have some projects developed with HTML5, CSS 3, Javascript and some frameworks like Bootstrap and Angular.</p>
-          <a href="#">Check it out!</a>
+          <a href="https://github.com/LeoVieira1997/Web-Projects-from-Bootcamp">Check it out!</a>
         </div>
         <div class="skill-row">
           <img class="python-img" src="images/png/python.png" alt="python">
